--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -386,6 +386,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "search_request"
+      ],
+      "metadata": {
+        "id": "JglD5K4YIoAQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## POST to the Planet API\n",
@@ -768,7 +779,7 @@
         "id": "kE6GHV8BPILG"
       },
       "source": [
-        "We need to sort the images to prioritize the clearer images ontop for the next step.  \n",
+        "# Sort the images to prioritize the clearer images\n",
         "\n",
         "This code sorts each group of satellite images within `grouped_items` by their `clear_percent` value in descending order, ensuring each group's most unobscured images are listed first. It then compiles these sorted groups into a new list, `sorted_items`. Finally, it prints the `clear_percent` values of all images in the first sorted group, displaying them from the highest to the lowest percentage of clarity."
       ]
@@ -1031,7 +1042,7 @@
       },
       "outputs": [],
       "source": [
-        "print(request)"
+        "request"
       ]
     },
     {
