--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -176,7 +176,9 @@
         "id": "Y3Md-d7CPILC"
       },
       "source": [
-        "### The event of interest\n",
+        "# 2022-23 Precipitation Events\n",
+        "\n",
+        "![Rainbow over Stanford Campus](https://punchmagazine.com/wp-content/uploads/0T1A7331-lagunita-with-rainbow-from-casbs-big-02-27-2023-Canon-EOS-7D-Mark-II-Robert-Siegel-1-1200x801.jpg \"Rainbow over Stanford Campus\")\n",
         "\n",
         "[During the winter of 2022-23, Northern California experienced a series of intense \"Atmospheric River\" events](https://en.wikipedia.org/wiki/2022%E2%80%932023_California_floods), which led to significant flooding across the region. These meteorological phenomena, characterized by long, narrow regions in the atmosphere that transport most of the water vapor outside of the tropics, brought heavy rains to areas that were not accustomed to such volumes of water.\n",
         "\n",
