--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -1205,6 +1205,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Useful utilities"
+      ],
+      "metadata": {
+        "id": "JHUyCHZCg_kp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# This line packages the contents of your Files folder, for download\n",
