--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -102,6 +102,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "LFYB8G1hQV4M"
+      },
       "source": [
         "# Installing packages\n",
         "\n",
@@ -110,32 +113,29 @@
         "Run the following code cell, then return to the previous cell and try it again.\n",
         "\n",
         "Continue to install missing packages, using the `!pip install` command, until you no longer recieve error messages."
-      ],
-      "metadata": {
-        "id": "LFYB8G1hQV4M"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yXINvoPSQEaZ"
+      },
+      "outputs": [],
       "source": [
         "# You can install packages that aren't currently installed in your Python Notebook using !pip install <package name>\n",
         "# In this case, we will install the Planet Package:\n",
         "!pip install rasterio planet folium"
-      ],
-      "metadata": {
-        "id": "yXINvoPSQEaZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Authentication"
-      ],
       "metadata": {
         "id": "j9oyYUMTFCaU"
-      }
+      },
+      "source": [
+        "## Authentication"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -248,16 +248,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NZOAVnEcta_N"
+      },
       "source": [
         "## Display the AOI\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "NZOAVnEcta_N"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kbjxpKaztcS3"
+      },
+      "outputs": [],
       "source": [
         "m = folium.Map([37.4264632718164,-122.1828114547462], zoom_start=15, tiles=\"cartodbpositron\")\n",
         "\n",
@@ -268,12 +273,7 @@
         "folium.LayerControl().add_to(m)\n",
         "\n",
         "m"
-      ],
-      "metadata": {
-        "id": "kbjxpKaztcS3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -330,21 +330,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9rizbiFQEg-i"
+      },
       "source": [
         "## Print the `combined_filter`\n",
         "\n",
         "Print the filter so you can see what the results look like"
-      ],
-      "metadata": {
-        "id": "9rizbiFQEg-i"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "R2t-AfQDPILE"
+        "id": "R2t-AfQDPILE",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -389,25 +389,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "search_request"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JglD5K4YIoAQ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "search_request"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0vXcs31VKq74"
+      },
       "source": [
         "## POST to the Planet API\n",
         "\n",
         "This code sends a POST request to the Planet API to search for images matching specific criteria defined in search_request. It uses basic authentication with an API key. The response, assumed to contain image data, is parsed from JSON to extract and print the number of image IDs found, showing how many images matched the search filters."
-      ],
-      "metadata": {
-        "id": "0vXcs31VKq74"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -507,14 +507,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "W1iR6YNpR6RX"
+      },
       "source": [
         "## Adding our previous Filters\n",
         "\n",
         "This code block sets up a cloud cover filter to only include images with greater than 80% clarity, combines it with other filters (geometric and date range), and then performs an asynchronous search with the Planet API to retrieve up to 500 items matching these criteria. It uses an asynchronous session for efficient network operations, collecting the search results into a list named item_list."
-      ],
-      "metadata": {
-        "id": "W1iR6YNpR6RX"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -537,12 +537,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Print the newly filtered # of items in your Search Result"
-      ],
       "metadata": {
         "id": "euMOtjkkUefH"
-      }
+      },
+      "source": [
+        "## Print the newly filtered # of items in your Search Result"
+      ]
     },
     {
       "cell_type": "code",
@@ -572,8 +572,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": true,
-        "id": "5yeF4C-KPILG"
+        "id": "5yeF4C-KPILG",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -626,15 +626,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Display the image footprints"
-      ],
       "metadata": {
         "id": "T_s07_s1xub0"
-      }
+      },
+      "source": [
+        "# Display the image footprints"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y5lu486ex0Yo"
+      },
+      "outputs": [],
       "source": [
         "import requests\n",
         "\n",
@@ -647,23 +652,18 @@
         "folium.LayerControl().add_to(m)\n",
         "\n",
         "m"
-      ],
-      "metadata": {
-        "id": "Y5lu486ex0Yo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_VMx-FlzV9R8"
+      },
       "source": [
         "# Examine an Item\n",
         "\n",
         "The code `item_list[0]` accesses the first item in the list named `item_list`, expected to contain data about geospatial features, specifically from the Planet API. The output shown is a Python dictionary representing a geospatial feature, including links to its data (`_links`), permissions available (`_permissions`), a list of `assets`, the `geometry` defining its spatial footprint, a unique identifier (`id`), and various properties such as a`cquisition time`, `cloud cover`, and more, related to the satellite image.\n"
-      ],
-      "metadata": {
-        "id": "_VMx-FlzV9R8"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -700,6 +700,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4MJqRf2yWlbR"
+      },
       "source": [
         "This code organizes a list of items (each representing a satellite image with an acquisition date) into groups based on their acquisition dates, with each group covering a span of 30 days.\n",
         "\n",
@@ -710,10 +713,7 @@
         "If an item's date is outside the current 30-day window, it starts a new group.\n",
         "\n",
         "Finally, it prints the number of these groups."
-      ],
-      "metadata": {
-        "id": "4MJqRf2yWlbR"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -806,14 +806,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "N_vjXNUFYZ9M"
+      },
       "source": [
         "## A function to calculate intersection\n",
         "\n",
         "This code defines a function get_overlap that calculates the area of overlap between two geometries. It uses the shape function from the shapely.geometry module to convert the input geometries into shape objects. Then, it computes the intersection of these two shapes, which represents the overlapping area, and returns this intersection as the result."
-      ],
-      "metadata": {
-        "id": "N_vjXNUFYZ9M"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -885,6 +885,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "v7SdRm5QZZX0"
+      },
       "source": [
         "## Evaluating cloud cover before and after\n",
         "\n",
@@ -895,10 +898,7 @@
         "After printing \"Now\", the second loop does the same for the first group of images that have been determined to minimally cover a target area, likely optimized for both coverage and clarity.\n",
         "\n",
         "This allows for a comparison of image clarity before and after optimization."
-      ],
-      "metadata": {
-        "id": "v7SdRm5QZZX0"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -1025,16 +1025,16 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DgDOXS54cFr7"
+      },
       "source": [
         "`print(request)` statement will output the assembled order request details created by the assemble_order function.\n",
         "\n",
         "This will include the name of the order, specified products (image IDs with their types and item type), and the tools applied (clip, band math, and composite) along with their configurations.\n",
         "\n",
         "The result is a structured representation of the order that is ready to be submitted to the Planet API for processing."
-      ],
-      "metadata": {
-        "id": "DgDOXS54cFr7"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -1123,6 +1123,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "t7zPFZhAd1RZ"
+      },
       "source": [
         "## Submitting and monitoring the orders\n",
         "\n",
@@ -1133,10 +1136,7 @@
         "This method is used to efficiently process multiple orders simultaneously, reducing overall completion time compared to sequential execution.\n",
         "\n",
         "***NOTE: This code block will sometimes throw errors, even though orderes have been submitted successfully. Be patient, and watch your Files location, for the incoming images. You should ultimately end up with the same number of images, as groups, that you caluclated earlier.***"
-      ],
-      "metadata": {
-        "id": "t7zPFZhAd1RZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -1206,42 +1206,47 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Useful utilities"
-      ],
       "metadata": {
         "id": "JHUyCHZCg_kp"
-      }
+      },
+      "source": [
+        "# Useful utilities"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "s7Gc13XDbU_1"
+      },
+      "outputs": [],
       "source": [
         "# This line packages the contents of your Files folder, for download\n",
         "\n",
         "!zip -r /content/file.zip /content/"
-      ],
-      "metadata": {
-        "id": "s7Gc13XDbU_1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xNN9PqOEbUnn"
+      },
+      "outputs": [],
       "source": [
         "#  This code downloads the packaged files and prompts for a directory to save to.\n",
         "\n",
         "from google.colab import files\n",
         "files.download(\"/content/file.zip\")"
-      ],
-      "metadata": {
-        "id": "xNN9PqOEbUnn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Tzn5dlBUtN7H"
+      },
+      "outputs": [],
       "source": [
         "# This function deletes all contents of a folder, recursively. USE WITH CAUTiON!!\n",
         "\n",
@@ -1261,15 +1266,13 @@
         "# in your colab notebook, or alter the directory path to target another folder\n",
         "\n",
         "# delete_contents('/content')\n"
-      ],
-      "metadata": {
-        "id": "Tzn5dlBUtN7H"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -1285,10 +1288,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
