added new auth section

--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -172,6 +172,32 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Using Google Colab Secret Manager"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import userdata\n",
+        "#Store your API key in the Colabs Secret Manager, as PL_API_KEY and enable notebook access to the secret\n",
+        "#Be sure to toggle on Notebook Access in the Secret Manager\n",
+        "# Get the API key from the secret manager\n",
+        "API_KEY = userdata.get('PL_API_KEY')\n",
+        "\n",
+        "# Set the API key as an environment variable\n",
+        "os.environ['PL_API_KEY'] = API_KEY\n",
+        "\n",
+        "# Create a client for the Planet API\n",
+        "client = Auth.from_key(API_KEY)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Y3Md-d7CPILC"
       },
@@ -1288,7 +1314,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
