--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -81,7 +81,7 @@
         "import matplotlib.pyplot as plt\n",
         "from requests.auth import HTTPBasicAuth\n",
         "from datetime import datetime, timedelta\n",
-        "from google.colab import userdata\n",
+        "\n",
         "\n",
         "#geospatial packages\n",
         "import rasterio\n",
@@ -94,6 +94,8 @@
         "#planet SDK\n",
         "from planet import Auth, reporting, Session, OrdersClient, order_request, data_filter\n",
         "\n",
+        "# Google Colab for authentication\n",
+        "from google.colab import userdata\n",
         "\n",
         "# We will also create a small helper function to print out JSON with proper indentation.\n",
         "def indent(data):\n",
@@ -134,7 +136,7 @@
         "id": "j9oyYUMTFCaU"
       },
       "source": [
-        "## Authentication"
+        "## Authentication with ENvironmental Variable"
       ]
     },
     {
@@ -161,20 +163,20 @@
       "outputs": [],
       "source": [
         "# if your Planet API Key is not set as an environment variable, you can paste it below\n",
-        "if 'PL_API_KEY' in os.environ:\n",
-        "    API_KEY = os.environ['PL_API_KEY']\n",
+        "if 'PLANET_API_KEY' in os.environ:\n",
+        "    PLANET_API_KEY = os.environ['PLANET_API_KEY']\n",
         "else:\n",
-        "    API_KEY = input(\"PASTE_API_KEY_HERE AND HIT RETURN:   \")\n",
-        "    os.environ['PL_API_KEY'] = API_KEY\n",
+        "    PLANET_API_KEY = input(\"PASTE_API_KEY_HERE AND HIT RETURN:   \")\n",
+        "    os.environ['PLANET_API_KEY'] = API_KEY\n",
         "\n",
-        "client = Auth.from_key(API_KEY)\n"
+        "client = Auth.from_key(PLANET_API_KEY)\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Using Google Colab Secret Manager"
+        "## Using Google Colab Secret Manager"
       ]
     },
     {
@@ -330,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "S3E5I4K2PILD"
       },
@@ -398,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "w0FSGwrpPILE"
       },
@@ -1300,7 +1302,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
