Update Planet API 101 Workshop notebook

--- a/planet_API_101_LakeLagunita.ipynb
+++ b/planet_API_101_LakeLagunita.ipynb
@@ -60,7 +60,18 @@
       "source": [
         "## Set up\n",
         "\n",
-        "In order to interact with the Planet API using the client, we need to import the necessary packages & define helper functions."
+        "In order to interact with the Planet API using the client, we need to install & import the necessary packages & define helper functions."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# You can install packages that aren't currently installed in your Python Notebook using !pip install <package name>\n",
+        "# In this case, we will install the Planet Package:\n",
+        "!pip install rasterio planet folium"
       ]
     },
     {
@@ -105,38 +116,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LFYB8G1hQV4M"
-      },
-      "source": [
-        "# Installing packages\n",
-        "\n",
-        "You probably encountered some errors after running that cell. Here, we will install the missing packages. If any other packages were missing from your Python Environment, they should be listed in the error messages, and you can simply add them to the end of the `!pip` command line to add them to the install sequence.\n",
-        "\n",
-        "Run the following code cell, then return to the previous cell and try it again.\n",
-        "\n",
-        "Continue to install missing packages, using the `!pip install` command, until you no longer recieve error messages."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yXINvoPSQEaZ"
-      },
-      "outputs": [],
-      "source": [
-        "# You can install packages that aren't currently installed in your Python Notebook using !pip install <package name>\n",
-        "# In this case, we will install the Planet Package:\n",
-        "!pip install rasterio planet folium"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "j9oyYUMTFCaU"
       },
       "source": [
-        "## Authentication with ENvironmental Variable"
+        "## Authentication with Environmental Variable"
       ]
     },
     {
@@ -164,12 +147,12 @@
       "source": [
         "# if your Planet API Key is not set as an environment variable, you can paste it below\n",
         "if 'PLANET_API_KEY' in os.environ:\n",
-        "    PLANET_API_KEY = os.environ['PLANET_API_KEY']\n",
+        "    API_KEY = os.environ['PLANET_API_KEY']\n",
         "else:\n",
-        "    PLANET_API_KEY = input(\"PASTE_API_KEY_HERE AND HIT RETURN:   \")\n",
+        "    API_KEY = input(\"PASTE_API_KEY_HERE AND HIT RETURN:   \")\n",
         "    os.environ['PLANET_API_KEY'] = API_KEY\n",
         "\n",
-        "client = Auth.from_key(PLANET_API_KEY)\n"
+        "client = Auth.from_key(API_KEY)\n"
       ]
     },
     {
